Functions Refactor and some fix bugs

--- a/NQuad.csproj
+++ b/NQuad.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;DESKTOP;KEYBOARD_MOUSE</DefineConstants>
+    <DefineConstants>TRACE;DESKTOP;KEYBOARD_MOUSE;TOUCH;GAMEPADS</DefineConstants>
     <Optimize>false</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
